--- a/src/main/resources/solitarioSpider.fxml
+++ b/src/main/resources/solitarioSpider.fxml
@@ -39,34 +39,80 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<VBox fx:id="ventada" prefHeight="757.0" prefWidth="1000.0" style="-fx-background-color: #005500" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1">
-  <children>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.geometry.Insets?>
+<VBox prefHeight="1000.0" prefWidth="1630.0" style="-fx-background-color: #005500"
+      xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Spider.SpiderController">
     <MenuBar prefHeight="0.0" prefWidth="564.0" VBox.vgrow="NEVER">
-      <menus>
         <Menu mnemonicParsing="false" text="File">
-          <items>
-            <MenuItem mnemonicParsing="false" text="New" />
-            <MenuItem mnemonicParsing="false" text="Open…" />
-            <MenuItem mnemonicParsing="false" text="Quit" />
-          </items>
+            <MenuItem mnemonicParsing="false" text="New"/>
+            <MenuItem mnemonicParsing="false" text="Open…"/>
+            <MenuItem mnemonicParsing="false" text="Quit"/>
         </Menu>
-      </menus>
     </MenuBar>
-    <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="752.0" prefWidth="1022.0" VBox.vgrow="ALWAYS">
-         <children>
-            <Pane fx:id="pepe" layoutX="20.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="171.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="353.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="506.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="659.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="813.0" layoutY="24.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="45.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="198.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="353.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="506.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="659.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-            <Pane layoutX="813.0" layoutY="282.0" opacity="0.2" prefHeight="194.0" prefWidth="141.0" style="-fx-background-color: black" />
-         </children>
+    <AnchorPane VBox.vgrow="ALWAYS" fx:id="anchorPane">
+        <StackPane fx:id="mazoPane" layoutX="40.0" layoutY="24.0" prefHeight="194.0" prefWidth="141.0" style="-fx-cursor: hand">
+            <ImageView fitWidth="141.0" fitHeight="194.0">
+                <StackPane.margin>
+                    <Insets left="-40" top="-40"/>
+                </StackPane.margin>
+                <Image url="@Large/999.png"/>
+            </ImageView>
+            <ImageView layoutX="22" fitWidth="141.0" fitHeight="194.0">
+                <StackPane.margin>
+                    <Insets left="-20" top="-20"/>
+                </StackPane.margin>
+                <Image url="@Large/999.png"/>
+            </ImageView>
+            <ImageView layoutX="34" fitWidth="141.0" fitHeight="194.0">
+                <Image url="@Large/999.png"/>
+            </ImageView>
+        </StackPane>
+        <Pane fx:id="fundacionesPane" layoutX="322.0" layoutY="20.0">
+            <Pane layoutX="20.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="181.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="342.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="503.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="664.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="825.0" prefHeight="194.0"
+                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="986.0" prefHeight="194.0"
+                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="1147.0" prefHeight="194.0"
+                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+        </Pane>
+
+
+
+        <Pane fx:id="columnasPane" layoutY="282.0">
+            <Pane layoutX="20.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)">
+            </Pane>
+            <Pane layoutX="181.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="342.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="503.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="664.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="825.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="986.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="1147.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="1308.0" prefHeight="194.0" prefWidth="141.0"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="1469.0" prefHeight="194.0"
+                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+        </Pane>
     </AnchorPane>
-  </children>
 </VBox>
