--- a/src/main/resources/solitarioSpider.fxml
+++ b/src/main/resources/solitarioSpider.fxml
@@ -53,66 +53,65 @@
         </Menu>
     </MenuBar>
     <AnchorPane VBox.vgrow="ALWAYS" fx:id="anchorPane">
-        <StackPane fx:id="mazoPane" layoutX="40.0" layoutY="24.0" prefHeight="194.0" prefWidth="141.0" style="-fx-cursor: hand">
-            <ImageView fitWidth="141.0" fitHeight="194.0">
+        <StackPane fx:id="mazoPane" layoutX="40.0" layoutY="15.0" prefHeight="194.0" prefWidth="141.0" style="-fx-cursor: hand">
+            <ImageView fitWidth="101.75" fitHeight="140">
                 <StackPane.margin>
                     <Insets left="-40" top="-40"/>
                 </StackPane.margin>
                 <Image url="@Large/999.png"/>
             </ImageView>
-            <ImageView layoutX="22" fitWidth="141.0" fitHeight="194.0">
+            <ImageView layoutX="22" fitWidth="101.75" fitHeight="140">
                 <StackPane.margin>
                     <Insets left="-20" top="-20"/>
                 </StackPane.margin>
                 <Image url="@Large/999.png"/>
             </ImageView>
-            <ImageView layoutX="34" fitWidth="141.0" fitHeight="194.0">
+            <ImageView layoutX="34" fitWidth="101.75" fitHeight="140">
                 <Image url="@Large/999.png"/>
             </ImageView>
         </StackPane>
-        <Pane fx:id="fundacionesPane" layoutX="322.0" layoutY="20.0">
-            <Pane layoutX="20.0" prefHeight="194.0" prefWidth="141.0"
+        <Pane fx:id="fundacionesPane" layoutX="225.0" layoutY="20.0">
+            <Pane layoutX="20.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="181.0" prefHeight="194.0" prefWidth="141.0"
+            <Pane layoutX="141.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="342.0" prefHeight="194.0" prefWidth="141.0"
+            <Pane layoutX="262.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="503.0" prefHeight="194.0" prefWidth="141.0"
+            <Pane layoutX="383.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="664.0" prefHeight="194.0" prefWidth="141.0"
+            <Pane layoutX="504.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="825.0" prefHeight="194.0"
-                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="986.0" prefHeight="194.0"
-                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="1147.0" prefHeight="194.0"
-                  prefWidth="141.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="625.0" prefHeight="140" prefWidth="101.75"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="746" prefHeight="140" prefWidth="101.75"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="867" prefHeight="140" prefWidth="101.75"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
         </Pane>
 
 
 
-        <Pane fx:id="columnasPane" layoutY="230.0">
-            <Pane layoutX="20.0" prefHeight="173.0" prefWidth="117.0"
-                  style="-fx-background-color: rgba(0,0,0,0.2)">
-            </Pane>
-            <Pane layoutX="181.0" prefHeight="173.0" prefWidth="117.0"
+        <Pane fx:id="columnasPane" layoutY="200.0">
+            <Pane layoutX="20.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="342.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="140.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="503.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="260.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="664.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="380.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="825.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="500.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="986.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="620.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="1147.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="740.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="1308.0" prefHeight="173.0" prefWidth="117.0"
+            <Pane layoutX="860.0" prefHeight="140" prefWidth="101.75"
                   style="-fx-background-color: rgba(0,0,0,0.2)"/>
-            <Pane layoutX="1469.0" prefHeight="173.0"
-                  prefWidth="117.0" style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="980.0" prefHeight="140" prefWidth="101.75"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
+            <Pane layoutX="1100.0" prefHeight="140" prefWidth="101.75"
+                  style="-fx-background-color: rgba(0,0,0,0.2)"/>
         </Pane>
     </AnchorPane>
 </VBox>
